tests/errors/init_state/partial_init/read_uninit_field_of_partial_struct.sim

        struct P { x: i64 y: i64 }
        fn f() {
          p: P;
          a: i64;
          entry:
            p.x = 1;
            a = copy p.y;
            return
        }
        