tests/errors/init_state/partial_init/read_uninit_field_of_partial_struct.err.expected
error: at 8:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'p' is used before initialization
   |
 8 |             a = copy p.y;
   |             ^^^^^^^^^^^^
